# emptyclip

./: .gitignore  CHANGELOG  CMakeLists.txt  README
assets/: armor.ods  export_tables.sh  itemgroups.ods  levels.ods  monsters.ods  sets.ods  skills.ods  weapons.ods
assets/animation/: player.xcf
assets/docs/: story.odt
assets/images/: sky0.xcf.bz2
assets/scripts/: csv2tsv.awk
assets/tables/: armor.ods  distance_model.ods  itemdrops.ods  levels.ods  monsters.ods  weapons.ods
assets/tutorials/: tutorial0.odt
deployment/: build_mingw.sh  emptyclip  emptyclip.desktop
src/: actions.cpp  actions.h  animation.cpp  animation.h  assets.cpp  assets.h  audio.cpp  audio.h  buffer.cpp  buffer.h  camera.cpp  camera.h  circular_buffer.h  color.h  config.cpp  config.h  constants.h  coord.h  events.cpp  events.h  filesystem.cpp  filesystem.h  font.cpp  font.h  framelimit.h  framework.cpp  framework.h  graphics.cpp  graphics.h  hud.cpp  hud.h  input.cpp  input.h  log.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  objectmanager.cpp  (+14 more)
src/objects/: ammo.cpp  ammo.h  armor.cpp  armor.h  entity.cpp  entity.h  item.cpp  item.h  misc.cpp  misc.h  monster.cpp  monster.h  object.cpp  object.h  particle.cpp  particle.h  player.cpp  player.h  templates.h  upgrade.cpp  upgrade.h  weapon.cpp  weapon.h
src/pnglite/: pnglite.c  pnglite.h
src/states/: convert.cpp  convert.h  editor.cpp  editor.h  null.cpp  null.h  play.cpp  play.h
src/ui/: button.cpp  button.h  element.cpp  element.h  image.cpp  image.h  label.cpp  label.h  style.cpp  style.h  textbox.cpp  textbox.h  ui.h
working/maps/: alien0.map  cave0.map  city0.map  city1.map  dungeon0.map  dungeon1.map  dungeon2.map  forest0.map  forest1.map  hell0.map  mansion0.map  mansion1.map  maze0.map  neighborhood0.map  skyscraper0.map  start0.map  town0.map  tutorial0.map  world0.map
working/maps/monstersets/: alien0  alien1  cave0  city0  city1  corporation0  desert0  dungeon0  dungeon1  forest0  forest1  future0  hell0  mansion0  mansion1  maze0  neighborhood0  skyscraper0  town0  tutorial0  world0
working/tables/: ammo.tsv  animation.tsv  armor.tsv  colors.tsv  fonts.tsv  itemdrops.tsv  items.tsv  levels.tsv  monsters.tsv  particles.tsv  reels.tsv  skills.tsv  strings.tsv  upgrades.tsv  weaponparticles.tsv  weapons.tsv
working/tables/sounds/: attack.tsv  samples.tsv
working/tables/textures/: editor.tsv  main.tsv  map.tsv
working/tables/ui/: buttons.tsv  elements.tsv  images.tsv  labels.tsv  styles.tsv
